--- a/Sistema_Examen/src/GUI/frmPrincipal.form
+++ b/Sistema_Examen/src/GUI/frmPrincipal.form
@@ -43,6 +43,11 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnuCrearActionPerformed"/>
               </Events>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Modificar"/>
+              </Properties>
+            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mnuIniciar">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Elegir "/>
