--- a/Sistema_Examen/src/GUI/frmCrearSeccion.form
+++ b/Sistema_Examen/src/GUI/frmCrearSeccion.form
@@ -134,6 +134,9 @@
           <Dimension value="[270, 184]"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="pnlListaCrearMouseEntered"/>
+      </Events>
 
       <Layout>
         <DimensionLayout dim="0">
