--- a/Sistema_Examen/src/GUI/frmExamen.form
+++ b/Sistema_Examen/src/GUI/frmExamen.form
@@ -351,6 +351,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Iniciar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
