--- a/Sistema_Examen/src/GUI/frmPrincipal.form
+++ b/Sistema_Examen/src/GUI/frmPrincipal.form
@@ -47,6 +47,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Modificar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnuModificarActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mnuIniciar">
               <Properties>
