--- a/Sistema_Examen/src/GUI/frmCrearSeccion.form
+++ b/Sistema_Examen/src/GUI/frmCrearSeccion.form
@@ -19,6 +19,9 @@
       </SubComponents>
     </Container>
     <Component class="javax.swing.JFileChooser" name="fcArchivo">
+      <Properties>
+        <Property name="multiSelectionEnabled" type="boolean" value="true"/>
+      </Properties>
     </Component>
   </NonVisualComponents>
   <Properties>
